--- a/src/app/shared/component/side-bar/side-bar.component.scss
+++ b/src/app/shared/component/side-bar/side-bar.component.scss
@@ -5,7 +5,6 @@
 
   .contentLogo {
     height: 4em;
-    background-color: rgb(164, 164, 115);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,3 +17,7 @@
     height: 100%;
   }
 }
+
+
+
+// responsive in  break point 
