--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="content">
+    <mat-grid-list cols="2" rowHeight="2:1">
+      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
+      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
+      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
+      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
+    </mat-grid-list>
+  </div>
+</div>
