--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -1,9 +1,7 @@
 <aside class="container">
   <div class="contentLogo">
     <a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">
-      <img
-        src="http://admin.mynailpop.com:7070/html/resources/images/common/nailpop_logo2.svg"
-        alt=""
+      <img src="../../../assets/logo/logo_v1.png" alt=""
     /></a>
   </div>
   <ul class="contentAside">
