--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
 <div class="container">
   <div class="content">
-    <mat-grid-list cols="2" rowHeight="2:1">
-      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
-      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
-      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
-      <mat-grid-tile><app-basic-charts></app-basic-charts></mat-grid-tile>
-    </mat-grid-list>
+    <div class="charst charst1"><app-basic-charts></app-basic-charts></div>
+    <div class="charst charst2"><app-basic-charts></app-basic-charts></div>
+    <div class="charst charst3"><app-basic-charts></app-basic-charts></div>
+    <div class="charst charst4"><app-basic-charts></app-basic-charts></div>
   </div>
 </div>
