--- a/src/app/shared/charts/basic-charts/basic-charts.component.html
+++ b/src/app/shared/charts/basic-charts/basic-charts.component.html
@@ -1,15 +1,15 @@
 <div class="container" id="chart">
-    <apx-chart
-      [series]="chartOptions.series"
-      [chart]="chartOptions.chart"
-      [dataLabels]="chartOptions.dataLabels"
-      [plotOptions]="chartOptions.plotOptions"
-      [yaxis]="chartOptions.yaxis"
-      [legend]="chartOptions.legend"
-      [fill]="chartOptions.fill"
-      [stroke]="chartOptions.stroke"
-      [tooltip]="chartOptions.tooltip"
-      [xaxis]="chartOptions.xaxis"
-    ></apx-chart>
-  </div>
-  
+  <h3 class="title">Title</h3>
+  <apx-chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [dataLabels]="chartOptions.dataLabels"
+    [plotOptions]="chartOptions.plotOptions"
+    [yaxis]="chartOptions.yaxis"
+    [legend]="chartOptions.legend"
+    [fill]="chartOptions.fill"
+    [stroke]="chartOptions.stroke"
+    [tooltip]="chartOptions.tooltip"
+    [xaxis]="chartOptions.xaxis"
+  ></apx-chart>
+</div>
