--- a/src/app/shared/component/item-side-bar/item-side-bar.component.scss
+++ b/src/app/shared/component/item-side-bar/item-side-bar.component.scss
@@ -2,26 +2,26 @@
   border: 1px snow solid;
   padding: 0 0 0.5em;
   a {
-    height: 3em;
+    height: 2.5em;
     display: flex;
     text-decoration: none;
     color: black;
     .icon {
-      line-height: 3em;
+      line-height: 2.5em;
       text-align: center;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 18px;
+      width: 3em;
       padding-bottom: 0.2em;
       overflow: hidden;
     }
     .textContent {
       line-height: 2.45em;
       flex-grow: 10;
-      font-size: 1.15em;
+      font-size: 100%;
       font-weight: 600;
-
+      text-align: left;
       flex-wrap: wrap;
     }
   }
