--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,4 +1,13 @@
 .container {
   background-color: #fafafa;
   padding: 3em;
+  .content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 20px 50px;
+    padding: 10px;
+
+    .charts {
+    }
+  }
 }
