--- a/src/app/shared/component/sideBar/item-side-bar/item-side-bar.component.html
+++ b/src/app/shared/component/sideBar/item-side-bar/item-side-bar.component.html
@@ -3,6 +3,7 @@
     routerLink="{{ path }}"
     routerLinkActive="active"
     ariaCurrentWhenActive="page"
+    [routerLinkActiveOptions]="{ exact: true }"
   >
     <div class="icon">
       <ng-template [ngIf]="icon"> <img src="{{ icon }}" alt="" /></ng-template>
