--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;500;600;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   list-style-type: none;
   text-decoration: none;
-  font-family: "Noto Sans KR", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: "Heebo", sans-serif;
+}
+
+:root {
+  --mainBackground: background-image: linear-gradient(to right, #4f89e5 18%, #4f89e5 54%, #6fb1fc 99%);
+  --mainColor:#d8e8fc;
+  --colorTextNormal :#609ef1;
+  
+
 }
