--- a/src/app/shared/component/sideBar/list-item-side-bar/list-item-side-bar.component.scss
+++ b/src/app/shared/component/sideBar/list-item-side-bar/list-item-side-bar.component.scss
@@ -63,14 +63,16 @@
 }
 .openSubMenu {
   height: auto;
-  font-weight: 800;
-  color: #609ef1;
+  font-weight: 800 !important;
+  color: #609ef1 !important;
 }
 .animationActive {
-  width: 100px;
-  height: 100px;
-  transform: rotate(-180deg);
-  transition: 0.4s;
+  .arrow {
+    img {
+      transform: rotate(-180deg);
+      transition: 0.4s;
+    }
+  }
 }
 @keyframes backOnHide {
   from {
@@ -80,3 +82,8 @@
     transform: rotate(0deg);
   }
 }
+// .active {
+//   .textContent {
+//     color: var(--mainColor);
+//   }
+// }
