--- a/src/app/shared/component/condition-box-model-and-region/condition-box-model-and-region.component.html
+++ b/src/app/shared/component/condition-box-model-and-region/condition-box-model-and-region.component.html
@@ -1,1 +1,15 @@
-<div class="wrapper"></div>
+<div class="wrapper">
+  <div class="model">
+    <h4 class="title">Model</h4>
+    <div class="selectBtn">
+      <app-button-selector-image-box> </app-button-selector-image-box>
+    </div>
+  </div>
+  <div class="region">
+    <h4 class="title">Region</h4>
+    <div class="selectBtn">
+      <app-search-and-select-mutiple-image-box>
+      </app-search-and-select-mutiple-image-box>
+    </div>
+  </div>
+</div>
