--- a/src/app/shared/template/print-infor-children/print-infor-children.component.scss
+++ b/src/app/shared/template/print-infor-children/print-infor-children.component.scss
@@ -5,9 +5,33 @@
   .conditionBox {
     background-color: var(--subBackground);
     width: 80%;
-    margin: auto;
+    margin: 40px auto;
+    width: 1056px;
+    height: 369px;
+    flex-grow: 0;
+    border-radius: 30px;
+
+    box-shadow: 0 7px 14px 0 #4f89e5;
+    background-color: #d8e8fc;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     .findByHardSection {
       display: flex;
+      justify-content: space-between;
+
+      .modelAndRegion {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+      }
+      .macAndAccountType {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+      }
     }
     .findByTime {
       display: flex;
