--- a/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.html
+++ b/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.html
@@ -1,1 +1,9 @@
-<p>search-and-select-mutiple-image-box works!</p>
+<div class="wrapper">
+  <div class="search">
+    <app-search-input-image-box></app-search-input-image-box>
+  </div>
+  <div class="suggestions">
+    <app-item-in-list-image-box></app-item-in-list-image-box>
+    <app-item-in-list-image-box></app-item-in-list-image-box>
+  </div>
+</div>
