--- a/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.html
+++ b/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.html
@@ -1,1 +1,12 @@
-<div class="wrapper"></div>
+<div class="wrapper">
+  <div class="macAddress sameClass">
+    <div class="title">Mac address</div>
+    <div class="input">
+      <app-input-image-box> </app-input-image-box>
+    </div>
+  </div>
+  <div class="searchTestAccount sameClass">
+    <div class="title">Search test account</div>
+    <div class="input">input</div>
+  </div>
+</div>
