--- a/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.scss
+++ b/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.scss
@@ -7,4 +7,46 @@
   border-radius: 20px;
   box-shadow: 0 7px 14px 0 rgba(0, 0, 0, 0.15);
   background-color: #fff;
+
+  .macAddress {
+    min-height: 70px;
+
+    display: flex;
+    justify-content: space-between;
+    > .title {
+      flex-grow: 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      letter-spacing: 0.5px;
+      font-size: 20px;
+      font-weight: 300;
+      min-width: 125px;
+    }
+    > .selectBtn {
+      flex-grow: 10;
+      border-left: 3px solid #396ab8;
+    }
+  }
+  .searchTestAccount {
+    min-height: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    > .title {
+      flex-grow: 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      letter-spacing: 0.5px;
+      font-size: 20px;
+      font-weight: 300;
+      min-width: 125px;
+    }
+    > .selectBtn {
+      flex-grow: 10;
+      border-left: 3px solid #396ab8;
+    }
+  }
 }
