--- a/src/app/shared/component/condition-box-model-and-region/condition-box-model-and-region.component.scss
+++ b/src/app/shared/component/condition-box-model-and-region/condition-box-model-and-region.component.scss
@@ -1,11 +1,12 @@
 .wrapper {
   width: 100%;
-  height: 180px;
+  min-height: 180px;
   flex-grow: 0;
 
   border-radius: 20px;
   box-shadow: 0 7px 14px 0 rgba(0, 0, 0, 0.15);
   background-color: #fff;
+  overflow: hidden;
   .model {
     min-height: 70px;
 
