--- a/src/app/shared/component/button-selector-image-box/button-selector-image-box.component.html
+++ b/src/app/shared/component/button-selector-image-box/button-selector-image-box.component.html
@@ -8,6 +8,6 @@
     </div>
   </div>
   <div class="subContentBtn">
-    <app-button-image-box></app-button-image-box>
+    <!-- <app-button-image-box></app-button-image-box> -->
   </div>
 </div>
