--- a/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.html
+++ b/src/app/shared/component/condition-box-mac-and-account-type/condition-box-mac-and-account-type.component.html
@@ -1,12 +1,14 @@
 <div class="wrapper">
   <div class="macAddress sameClass">
-    <div class="title">Mac address</div>
+    <h4 class="title">Mac address</h4>
     <div class="input">
       <app-input-image-box> </app-input-image-box>
     </div>
   </div>
   <div class="searchTestAccount sameClass">
     <div class="title">Search test account</div>
-    <div class="input">input</div>
+    <div class="input">
+      <app-list-radio-image-box></app-list-radio-image-box>
+    </div>
   </div>
 </div>
