--- a/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.html
+++ b/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.html
@@ -1,1 +1,6 @@
-<p>condition-boxfind-by-month works!</p>
+<div class="wrapper">
+  <app-button-image-box></app-button-image-box>
+  <app-button-image-box></app-button-image-box>
+  <app-button-image-box></app-button-image-box>
+  <app-button-image-box></app-button-image-box>
+</div>
