--- a/src/app/shared/component/input-image-box/input-image-box.component.html
+++ b/src/app/shared/component/input-image-box/input-image-box.component.html
@@ -1,1 +1,3 @@
-<p>input-image-box works!</p>
+<div class="search">
+  <input type="text" placeholder="" spellCheck="{false}" class="searchInput" />
+</div>
