--- a/src/app/shared/component/button-image-box/button-image-box.component.html
+++ b/src/app/shared/component/button-image-box/button-image-box.component.html
@@ -1,1 +1,4 @@
-<div class="wrapper"></div>
+<div class="wrapper" [class.outline] =  >
+  <!-- <div class="icon"></div> -->
+  <div class="text" >Buttons</div>
+</div>
