--- a/src/app/shared/component/button-image-box/button-image-box.component.html
+++ b/src/app/shared/component/button-image-box/button-image-box.component.html
@@ -1,4 +1,1 @@
-<div class="wrapper" [class.outline] =  >
-  <!-- <div class="icon"></div> -->
-  <div class="text" >Buttons</div>
-</div>
+<button class="customs" mat-raised-button color="primary">Primary</button>
