--- a/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.html
+++ b/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <app-button-image-box></app-button-image-box>
-  <app-button-image-box></app-button-image-box>
-  <app-button-image-box></app-button-image-box>
-  <app-button-image-box></app-button-image-box>
+  <button mat-flat-button color="primary">1 months</button
+  ><button mat-flat-button color="primary">3 months</button
+  ><button mat-flat-button color="primary">6 months</button
+  ><button mat-flat-button color="primary">6 months</button>
 </div>
