--- a/src/app/views/printAnalysis/print-information/print-information.component.scss
+++ b/src/app/views/printAnalysis/print-information/print-information.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background: var(--mainBackground);
+  background-color: var(--mainBackground) !important;
   height: 100vh;
   width: 100%;
 }
