--- a/src/app/shared/component/button-image-box/button-image-box.component.html
+++ b/src/app/shared/component/button-image-box/button-image-box.component.html
@@ -1,1 +1,1 @@
-<button class="customs" mat-raised-button color="primary">Primary</button>
+<button mat-flat-button color="primary">1 months</button>
