--- a/src/app/shared/component/input-image-box/input-image-box.component.html
+++ b/src/app/shared/component/input-image-box/input-image-box.component.html
@@ -1,3 +1,10 @@
-<div class="search">
-  <input type="text" placeholder="" spellCheck="{false}" class="searchInput" />
+<div class="input">
+  <input
+    type="text"
+    placeholder="{{ placeholder }}"
+    spellCheck="{false}"
+    class="searchInput"
+    width="width"
+    height="height"
+  />
 </div>
