--- a/src/app/shared/component/list-radio-image-box/list-radio-image-box.component.scss
+++ b/src/app/shared/component/list-radio-image-box/list-radio-image-box.component.scss
@@ -8,6 +8,7 @@
     align-items: center;
     padding-right: 1em;
     padding-top: 0.4em;
+    justify-content: center;
     input {
       display: block;
       margin-right: 1em;
