--- a/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.html
+++ b/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.html
@@ -3,7 +3,14 @@
     <app-search-input-image-box></app-search-input-image-box>
   </div>
   <div class="suggestions">
-    <app-item-in-list-image-box></app-item-in-list-image-box>
-    <app-item-in-list-image-box></app-item-in-list-image-box>
+    <div class="item">
+      <mat-checkbox color="primary" class="example-margin"
+        >New York</mat-checkbox
+      >
+    </div>
+
+    <div class="item">
+      <mat-checkbox color="primary" class="example-margin">Seoul</mat-checkbox>
+    </div>
   </div>
 </div>
