--- a/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.scss
+++ b/src/app/shared/component/condition-boxfind-by-month/condition-boxfind-by-month.component.scss
@@ -2,18 +2,5 @@
   display: flex;
   justify-content: space-evenly;
   width: 100%;
-}
-::ng-deep .mat-flat-button {
-  background-color: #fff;
-  width: 85.4px;
-  height: 32.7px;
-
-  span {
-    padding: 8px 16px !important;
-    border-radius: 15px;
-    border: solid 1.5px transparent;
-  }
-  :hover {
-    border: solid 1.5px #396ab8;
-  }
+  padding-right: 2em;
 }
