--- a/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.scss
+++ b/src/app/shared/component/search-and-select-mutiple-image-box/search-and-select-mutiple-image-box.component.scss
@@ -9,8 +9,16 @@
     width: 100%;
     text-align: center;
   }
-  .suggestion {
-    display: block;
+  .suggestions {
+    display: flex;
     flex-direction: column;
+    margin-top: 6px;
+
+    align-items: flex-start;
+    width: 100%;
+    .item {
+      margin-left: 1em;
+      zoom: 0.9;
+    }
   }
 }
