--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;500;600;800;900&display=swap");
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 * {
   margin: 0;
   padding: 0;
   list-style-type: none;
   text-decoration: none;
   font-family: "Heebo", sans-serif;
+  font-size: 101%;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
 }
 
 :root {
@@ -34,4 +45,13 @@
 
 .mat-icon-button.mat-success {
   color: #155724;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
